syntax = "proto3";

message ObjectGenericArray {
    ObjectGenericArray.IPagination pagination = 1;
    repeated ObjectGenericArray.IPerson data = 2;


    message IPagination {
        double page = 1;
        double limit = 2;
        double total_count = 3;
        double total_pages = 4;
    }

    message IPerson {
        string name = 1;
        double age = 2;
    }
}